--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "morgan": "^1.9.1",
     "nunjucks": "^3.1.6",
     "path": "^0.12.7",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request": "^2.88.0",
+    "requests": "^0.2.2"
   }
 }
