--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.2",
     "morgan": "^1.9.1",
+    "nodejslogger": "^1.2.3",
     "nunjucks": "^3.1.6",
     "path": "^0.12.7",
     "pug": "2.0.0-beta11",
     "request": "^2.88.0",
-    "requests": "^0.2.2"
+    "requests": "^0.2.2",
+    "winston": "^3.2.1"
   }
 }
